Atualização da navbar

--- a/index.html
+++ b/index.html
@@ -129,22 +129,22 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="navbar-brand page-scroll" href="index.htm#sobre">Sobre</a>
+                        <a class="navbar-brand page-scroll" href="index.html#sobre">Sobre</a>
                     </li>
                     <li>
-                        <a class="navbar-brand page-scroll" href="index.htm#convidados">Convidados</a>
+                        <a class="navbar-brand page-scroll" href="index.html#convidados">Convidados</a>
                     </li>
                     <li>
-                        <a class="navbar-brand page-scroll" href="index.htm#cronograma">Programação</a>
+                        <a class="navbar-brand page-scroll" href="index.html#cronograma">Programação</a>
                     </li>
                     <li>
-                        <a class="navbar-brand page-scroll" href="index.htm#patrocinios">Patrocínios</a>
+                        <a class="navbar-brand page-scroll" href="index.html#patrocinios">Patrocínios</a>
                     </li>
                     <li>
-                        <a class="navbar-brand page-scroll" href="index.htm#inscricao">Inscrição</a>
+                        <a class="navbar-brand page-scroll" href="index.html#inscricao">Inscrição</a>
                     </li>
                     <li>
-                        <a class="navbar-brand page-scroll" href="index.htm#contato">Contato</a>
+                        <a class="navbar-brand page-scroll" href="index.html#contato">Contato</a>
                     </li>
                     <!--
                     <li>
