del trash imgs and change section subscription

--- a/index.html
+++ b/index.html
@@ -874,7 +874,7 @@
                         <div class="row row-top-10">
                             <div class="col-md-3">
                                 <span class="atividade">
-                                    20:00 às 21:00
+                                    19:00 às 20:00
                                 </span>
                             </div>
                             <div class="col-md-3">
@@ -928,7 +928,7 @@
                         <div class="row row-top-10">
                             <div class="col-md-3">
                                 <span class="atividade">
-                                    19:00 às 20:00
+                                    20:00 às 21:00
                                 </span>
                             </div>
                             <div class="col-md-3">
@@ -1032,7 +1032,7 @@
                     </div>
                 </div>
                 <div class="row no-gutter popup-gallery" style="display: flex; justify-content: center; align-items: center;">
-                    <img src="img/logo CA.jpg" width="252px">
+                    <img src="img/logoCA.jpg" width="252px">
                 </div>
             </div>
 
@@ -1058,8 +1058,12 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center" style="background-color:rgb(34, 59, 139);color:#f2f5ff;">
                     <h2 class="section-heading">Inscrição</h2>
                     <hr class="light">
-                    <h1><a class="link-inscricao" target="_blank" href="https://www.eventbrite.com.br/e/secomp-vii-registration-51991253238">
-                            Realize sua inscrição aqui!</a></h1>
+                    <a target="_blank" href="https://www.eventbrite.com.br/e/secomp-vii-registration-51991253238" style="padding-right: 90px; padding-top: 20px;">                        
+                        <button class="button-link">Inscreva-se</button>
+                    </a>
+                    <a class="img-link" target="_blank" href="https://www.eventbrite.com.br/e/secomp-vii-registration-51991253238">
+                        <img src="img/joven_programador.png" width="252px" style="padding-top: 30px;" />
+                    </a>
                 </div>
             </div>
         </div>
