Alteções de alinhamentos e ajustes na responsividade mobile

--- a/index.html
+++ b/index.html
@@ -156,32 +156,27 @@
 
     <header>
         <div class="header-content">
-            <div class="header-content-inner">
-                <div class="container">
-
-                </div>
+            <div class="header-content-inner">                
             </div>
         </div>
     </header>
 
-    <section class="bg-primary" id="sobre" style="height: 100%">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    <h2 class="section-heading">Sobre o Evento</h2>
-                    <hr class="light">
-                    <p class="text-faded">
-                        A Semana da Computação da UVA (SECOMP) é um evento realizado por alunos, professores e
-                        colaboradores, com foco na socialização do conhecimento e debate sobre computação e suas
-                        tecnologias, com diversas palestras,minicursos e workshops sobre inovações na área.
-                        <br /><br />
-                        Neste ano, a Semana da Computação que estará em sua sétima edição acontecerá entre os
-                        dias 10 e 12 de Dezembro e terá como tema "Tecnologia e suas singularidades".
-                        <br /><br />
-                        Além disto, diversas atrações estão programadas para realizar este momento ímpar.
-                        Junte-se a nós e não perca esta oportunidade única!
-                    </p>
-                </div>
+    <section class="bg-primary section-about" id="sobre">
+        <div class="container">            
+            <div class="col-md-12 text-center">
+                <h2 class="section-heading">Sobre o Evento</h2>
+                <hr class="light">
+                <p class="text-faded">
+                    A Semana da Computação da UVA (SECOMP) é um evento realizado por alunos, professores e
+                    colaboradores, com foco na socialização do conhecimento e debate sobre computação e suas
+                    tecnologias, com diversas palestras,minicursos e workshops sobre inovações na área.
+                    <br /><br />
+                    Neste ano, a Semana da Computação que estará em sua sétima edição acontecerá entre os
+                    dias 10 e 12 de Dezembro e terá como tema "Tecnologia e suas singularidades".
+                    <br /><br />
+                    Além disto, diversas atrações estão programadas para realizar este momento ímpar.
+                    Junte-se a nós e não perca esta oportunidade única!
+                </p>
             </div>
         </div>
     </section>
@@ -369,7 +364,7 @@
 
     <!-- Cronograma -->
 
-    <section class="bg-cronograma" id="cronograma">
+    <section class="bg-cronograma" id="cronograma" style="padding: 100px 0;">
         <div class="row">
             <div class="col-md-12 text-center">
                 <h2 class="section-heading">Programação</h2>
@@ -967,7 +962,7 @@
                             </div>
                             <div class="col-md-6">
                                 <span class="atividade">
-                                    Encerramento
+                                    Cerimônia de Encerramento
                                 </span>
                             </div>
 
@@ -1002,7 +997,7 @@
 
     <!-- Fecha Cronograma -->
     <!-- Abre Patrocinadores-->
-    <section class="no-padding" id="patrocinios">
+    <section class="no-padding" id="patrocinios" style="background-color:rgb(255, 255, 255); color: black; padding: 40px;">
         <div class="container-fluid">
             <div class="row apoio2" style="padding-bottom: 50px">
                 <div class="col-lg-12 text-center">
@@ -1010,17 +1005,19 @@
                     <hr class="verde">
                 </div>
             </div>
-            <div class="row no-gutter popup-gallery" style="display: flex; justify-content: center; align-items: center;">
-                <div class="col-md-3">
-                    <img src="img/patrocinio/cie.png" width="252px" style="padding-bottom: 50px;">
-                </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-4" style="padding-bottom: 50px;">
+                        <img src="img/patrocinio/cie.png" width="252px">
+                    </div>
 
-                <div class="col-md-3">
-                    <img src="img/patrocinio/pcnet.jpg" width="252px" style="padding-bottom: 50px;">
-                </div>
+                    <div class="col-sm-4" style="padding-bottom: 50px; ">
+                        <img src="img/patrocinio/pcnet.jpg" width="252px">
+                    </div>
 
-                <div class="col-md-3">
-                    <img src="img/patrocinio/nortmotos.jpg" width="300px" style="padding-bottom: 50px;">
+                    <div class="col-sm-4" style="padding-bottom: 50px; ">
+                        <img src="img/patrocinio/nortmotos.jpg" width="300px">
+                    </div>
                 </div>
             </div>
 
@@ -1137,6 +1134,9 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/creative.js"></script>
+
+    <!--zueira never ends... -->
+    <script src='https://rawgit.com/WeiChiaChang/Easter-egg/master/easter-eggs-collection.js'></script>
 
 </body>
 
