add section localization, bugs fixes and change in programming

--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-
-
+<html lang="pt-br">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <link rel="shortcut icon" href="img/fav.png">
     <title>VII SECOMP - Semana da Computação</title>
 
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">></script>-->
@@ -145,6 +143,9 @@
                         <a class="navbar-brand page-scroll" href="index.html#inscricao">Inscrição</a>
                     </li>
                     <li>
+                        <a class="navbar-brand page-scroll" href="index.html#localizacao">Localização</a>
+                    </li>
+                    <li>
                         <a class="navbar-brand page-scroll" href="index.html#contato">Contato</a>
                     </li>                    
                 </ul>
@@ -169,7 +170,7 @@
                 <p class="text-faded">
                     A Semana da Computação da UVA (SECOMP) é um evento realizado por alunos, professores e
                     colaboradores, com foco na socialização do conhecimento e debate sobre computação e suas
-                    tecnologias, com diversas palestras,minicursos e workshops sobre inovações na área.
+                    tecnologias, com diversas palestras, minicursos e workshops sobre inovações na área.
                     <br /><br />
                     Neste ano, a Semana da Computação que estará em sua sétima edição acontecerá entre os
                     dias 10 e 12 de Dezembro e terá como tema "Tecnologia e suas singularidades".
@@ -401,7 +402,7 @@
                             </div>
                             <div class="col-md-3">
                                 <span class="atividade">
-                                    Entrada do Auditório do CCS
+                                    Auditório do CCS
                                 </span>
                             </div>
 
@@ -452,6 +453,31 @@
                         <div class="row row-top-10">
                             <div class="col-md-3">
                                 <span class="atividade">
+                                    19:20 às 20:00
+                                </span>
+                            </div>
+                            <div class="col-md-3">
+                                <span class="atividade">
+                                    Auditório do CCS
+                                </span>
+                            </div>
+                            <div class="col-md-6">
+                                <span class="atividade">
+                                    Jogos Pervasivos
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <img class="img-cronograma" src="img/palestrantes/ederjacques.jpg">
+                    </div>
+                </div>
+
+                <div class="row row-linha">
+                    <div class="col-md-10 text-left">
+                        <div class="row row-top-10">
+                            <div class="col-md-3">
+                                <span class="atividade">
 
                                 </span>
                             </div>
@@ -471,31 +497,6 @@
                         <!--<img class="img-cronograma" src="img/palestrantes/ifgnu.jpg">-->
                     </div>
 
-                </div>
-
-                <div class="row row-linha">
-                    <div class="col-md-10 text-left">
-                        <div class="row row-top-10">
-                            <div class="col-md-3">
-                                <span class="atividade">
-                                    19:20 às 20:00
-                                </span>
-                            </div>
-                            <div class="col-md-3">
-                                <span class="atividade">
-                                    Auditório do CCS
-                                </span>
-                            </div>
-                            <div class="col-md-6">
-                                <span class="atividade">
-                                    Jogos Pervasivos
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <img class="img-cronograma" src="img/palestrantes/ederjacques.jpg">
-                    </div>
                 </div>
 
 
@@ -643,7 +644,7 @@
                             </div>
                             <div class="col-md-6">
                                 <span class="atividade">
-                                    Conhecendo MOSQUITTO e suas funcionalidades
+                                    Oficina Conhecendo MOSQUITTO e suas funcionalidades
                                 </span>
                             </div>
 
@@ -816,33 +817,6 @@
                         <div class="row row-top-10">
                             <div class="col-md-3">
                                 <span class="atividade">
-                                    08:00 às 12:00
-                                </span>
-                            </div>
-                            <div class="col-md-3">
-                                <span class="atividade">
-                                    Laboratório 1
-                                </span>
-                            </div>
-                            <div class="col-md-6">
-                                <span class="atividade">
-                                    TCC Model Canvas
-                                </span>
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <img class="img-cronograma" src="img/palestrantes/lorivalsilva.jpg">
-                    </div>
-                </div>               
-
-
-                <div class="row row-linha">
-                    <div class="col-md-10 text-left">
-                        <div class="row row-top-10">
-                            <div class="col-md-3">
-                                <span class="atividade">
                                     14:00 às 18:00
                                 </span>
                             </div>
@@ -861,6 +835,32 @@
                     </div>
                     <div class="col-md-2">
                         <img class="img-cronograma" src="img/palestrantes/lisboacoutinho.gif">
+                    </div>
+                </div>
+
+                <div class="row row-linha">
+                    <div class="col-md-10 text-left">
+                        <div class="row row-top-10">
+                            <div class="col-md-3">
+                                <span class="atividade">
+                                    14:00 às 18:00
+                                </span>
+                            </div>
+                            <div class="col-md-3">
+                                <span class="atividade">
+                                    Sala 40
+                                </span>
+                            </div>
+                            <div class="col-md-6">
+                                <span class="atividade">
+                                    Oficina de TCC Model Canvas
+                                </span>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <img class="img-cronograma" src="img/palestrantes/lorivalsilva.jpg">
                     </div>
                 </div>
                 
@@ -914,7 +914,6 @@
                     <div class="col-md-2">
                         <!--<img class="img-cronograma" src="img/palestrantes/ifgnu.jpg">-->
                     </div>
-
                 </div>
 
 
@@ -994,8 +993,8 @@
             </div>
         </div>
     </section>
-
     <!-- Fecha Cronograma -->
+
     <!-- Abre Patrocinadores-->
     <section class="no-padding" id="patrocinios" style="background-color:rgb(255, 255, 255); color: black; padding: 40px;">
         <div class="container-fluid">
@@ -1008,64 +1007,85 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-4" style="padding-bottom: 50px;">
-                        <img src="img/patrocinio/cie.png" width="252px">
+                        <img src="img/patrocinio/cie.png" width="252px" class="img-patrocinio">
                     </div>
 
                     <div class="col-sm-4" style="padding-bottom: 50px; ">
-                        <img src="img/patrocinio/pcnet.jpg" width="252px">
+                        <img src="img/patrocinio/pcnet.jpg" width="252px" class="img-patrocinio">
                     </div>
 
                     <div class="col-sm-4" style="padding-bottom: 50px; ">
-                        <img src="img/patrocinio/nortmotos.jpg" width="300px">
+                        <img src="img/patrocinio/nortmotos.jpg" width="300px" class="img-patrocinio">
                     </div>
                 </div>
             </div>
 
-            <div class="col-md-6">
-                <div class="row apoio2" style="padding-bottom: 25px;">
-                    <div class="col-lg-12 text-center">
-                        <h2 class="section-heading">Organização</h2>
-                        <hr class="verde">
-                    </div>
-                </div>
-                <div class="row no-gutter popup-gallery" style="display: flex; justify-content: center; align-items: center;">
-                    <img src="img/logoCA.jpg" width="252px">
+            <div class="row apoio2" style="padding-bottom: 25px;">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Realização</h2>
+                    <hr class="verde">
                 </div>
             </div>
-
-            <div class="col-md-6">
-                <div class="row apoio2" style="padding-bottom: 25px;">
-                    <div class="col-lg-12 text-center">
-                        <h2 class="section-heading">Apoio</h2>
-                        <hr class="verde">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-4 center" style="padding-bottom: 50px; padding-left: 10%;">
+                        <img src="img/logoUva50Anos.png" width="190px" class="img-patrocinio">
                     </div>
-                </div>
-                <div class="row no-gutter popup-gallery" style="display: flex; justify-content: center; align-items: center;">
-                    <img src="img/logoUva50Anos.png" width="190px">
+                    <div class="col-md-4 center" style="padding-bottom: 50px; ">
+                        <img src="img/logoCA.jpg" width="252px" class="img-patrocinio">
+                    </div>                    
+                    <div class="col-md-2"></div>
                 </div>
             </div>
         </div>
         <br>
         <br>
     </section>
+    <!-- Fecha Patrocinadores-->
 
-    <section id="inscricao" class="bg-primary" style="height: 100%; background-color:rgb(34, 59, 139);color:#f2f5ff;">
+    <!-- Abre Inscrição-->
+    <section id="inscricao" class="bg-primary" style="height: 100%; ">
         <div class="container" style="background-color:rgb(34, 59, 139);color:#f2f5ff;">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center" style="background-color:rgb(34, 59, 139);color:#f2f5ff;">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Inscrição</h2>
-                    <hr class="light">
+                    <hr class="light">           
                     <a target="_blank" href="https://www.eventbrite.com.br/e/secomp-vii-registration-51991253238" style="padding-right: 90px; padding-top: 20px;">                        
                         <button class="button-link">Inscreva-se</button>
                     </a>
                     <a class="img-link" target="_blank" href="https://www.eventbrite.com.br/e/secomp-vii-registration-51991253238">
-                        <img src="img/joven_programador.png" width="252px" style="padding-top: 30px;" />
+                        <img src="img/joven_programador.png" width="252px" style="padding-top: 30px;"/>
                     </a>
                 </div>
             </div>
         </div>
     </section>
+    <!-- Fecha Inscrição-->
 
+    <!-- Abre Localização -->
+    <section id="localizacao" style="height: 100%; ">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center" style="padding-bottom: 20px;">
+                    <h2 class="section-heading">Localização</h2>
+                    <hr class="verde">                       
+                </div>
+                <div class="col-md-6" style="padding-bottom: 15px;">   
+                    <h3 class="section-heading">Palestras</h3>     
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.5839036202433!2d-40.33978778524654!3d-3.681732343967947!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7eac73b72080923%3A0xa63653c84ab5e6cb!2sCCS-UVA!5e0!3m2!1spt-BR!2sbr!4v1543776238865" class="map-google" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <div class="col-md-6">        
+                    <h3 class="section-heading">Oficinas</h3>   
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d995.3933480479128!2d-40.342446590282435!3d-3.6840823133657996!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7eac723aa8db281%3A0xa5f3ce91510f566b!2sUVA+-+Campus+CIDAO!5e0!3m2!1spt-BR!2sbr!4v1543778117984" class="map-google" frameborder="0" allowfullscreen></iframe>
+                    <h6>* Dirigir-se ao bloco do Curso de Ciências da Computação</h6>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Fecha Localização -->
+
+    <!-- Abre Contato-->
     <section id="contato" class="bg-primary2">
         <div class="container" style="font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif; text-align: center">
             <div class="row">
@@ -1090,7 +1110,9 @@
             </div>
         </div>
     </section>
+    <!-- Fecha Contato-->
 
+    <!-- Abre Redes Sociais -->
     <section id="rodape">
         <div class="container">
             <div class="col-md-2">
@@ -1118,6 +1140,8 @@
             </div>
         </div>
     </section>
+    <!-- Fecha Redes Sociais -->
+
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
     <!-- Bootstrap Core JavaScript -->
