Mudança do link de inscriçao

--- a/index.html
+++ b/index.html
@@ -1051,7 +1051,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Inscrição</h2>
                     <hr class="light">           
-                    <a target="_blank" href="https://www.eventbrite.com.br/e/secomp-vii-registration-51991253238" style="padding-right: 90px; padding-top: 20px;">                        
+                    <a target="_blank" href="https://goo.gl/forms/fR0GI0vej9rrAO6v2" style="padding-right: 90px; padding-top: 20px;">                        
                         <button class="button-link">Inscreva-se</button>
                     </a>
                     <a class="img-link" target="_blank" href="https://www.eventbrite.com.br/e/secomp-vii-registration-51991253238">
