Adicionado gilson filho com a oficina de arduino

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     </li>
                     <li>
                         <a class="navbar-brand page-scroll" href="index.html#contato">Contato</a>
-                    </li>                    
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -157,13 +157,13 @@
 
     <header>
         <div class="header-content">
-            <div class="header-content-inner">                
+            <div class="header-content-inner">
             </div>
         </div>
     </header>
 
     <section class="bg-primary section-about" id="sobre">
-        <div class="container">            
+        <div class="container">
             <div class="col-md-12 text-center">
                 <h2 class="section-heading">Sobre o Evento</h2>
                 <hr class="light">
@@ -334,7 +334,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-4"></div>
+
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img class="img-circle" src="img/palestrantes/edsoncavalcanti.gif" alt="">
@@ -349,7 +349,23 @@
                         </ul>
                     </div>
                 </div>
+
                 <div class="col-sm-4"></div>
+
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img class="img-circle" src="img/palestrantes/gilsonfilho.jpg" alt="">
+                        <h4>Gilson Filho</h4>
+                        <p class="text-muted"></p>
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item">
+                                <a target="_blank" href="">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
 
 
 
@@ -848,6 +864,32 @@
                             </div>
                             <div class="col-md-3">
                                 <span class="atividade">
+                                    Laboratório 2
+                                </span>
+                            </div>
+                            <div class="col-md-6">
+                                <span class="atividade">
+                                    Oficina Introdução a Plataforma Arduino
+                                </span>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <img class="img-cronograma" src="img/palestrantes/gilsonfilho.jpg">
+                    </div>
+                </div>
+
+                <div class="row row-linha">
+                    <div class="col-md-10 text-left">
+                        <div class="row row-top-10">
+                            <div class="col-md-3">
+                                <span class="atividade">
+                                    14:00 às 18:00
+                                </span>
+                            </div>
+                            <div class="col-md-3">
+                                <span class="atividade">
                                     Sala 40
                                 </span>
                             </div>
@@ -863,7 +905,7 @@
                         <img class="img-cronograma" src="img/palestrantes/lorivalsilva.jpg">
                     </div>
                 </div>
-                
+
                 <div class="row row-linha">
                     <div class="col-md-10 text-left">
                         <div class="row row-top-10">
@@ -1034,7 +1076,7 @@
                     </div>
                     <div class="col-md-4 center" style="padding-bottom: 50px; ">
                         <img src="img/logoCA.jpg" width="252px" class="img-patrocinio">
-                    </div>                    
+                    </div>
                     <div class="col-md-2"></div>
                 </div>
             </div>
@@ -1050,12 +1092,12 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Inscrição</h2>
-                    <hr class="light">           
-                    <a target="_blank" href="https://goo.gl/forms/fR0GI0vej9rrAO6v2" style="padding-right: 90px; padding-top: 20px;">                        
+                    <hr class="light">
+                    <a target="_blank" href="https://goo.gl/forms/fR0GI0vej9rrAO6v2" style="padding-right: 90px; padding-top: 20px;">
                         <button class="button-link">Inscreva-se</button>
                     </a>
                     <a class="img-link" target="_blank" href="https://www.eventbrite.com.br/e/secomp-vii-registration-51991253238">
-                        <img src="img/joven_programador.png" width="252px" style="padding-top: 30px;"/>
+                        <img src="img/joven_programador.png" width="252px" style="padding-top: 30px;" />
                     </a>
                 </div>
             </div>
@@ -1069,15 +1111,17 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center" style="padding-bottom: 20px;">
                     <h2 class="section-heading">Localização</h2>
-                    <hr class="verde">                       
+                    <hr class="verde">
                 </div>
-                <div class="col-md-6" style="padding-bottom: 15px;">   
-                    <h3 class="section-heading">Palestras</h3>     
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.5839036202433!2d-40.33978778524654!3d-3.681732343967947!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7eac73b72080923%3A0xa63653c84ab5e6cb!2sCCS-UVA!5e0!3m2!1spt-BR!2sbr!4v1543776238865" class="map-google" frameborder="0" allowfullscreen></iframe>
+                <div class="col-md-6" style="padding-bottom: 15px;">
+                    <h3 class="section-heading">Palestras</h3>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.5839036202433!2d-40.33978778524654!3d-3.681732343967947!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7eac73b72080923%3A0xa63653c84ab5e6cb!2sCCS-UVA!5e0!3m2!1spt-BR!2sbr!4v1543776238865"
+                        class="map-google" frameborder="0" allowfullscreen></iframe>
                 </div>
-                <div class="col-md-6">        
-                    <h3 class="section-heading">Oficinas</h3>   
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d995.3933480479128!2d-40.342446590282435!3d-3.6840823133657996!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7eac723aa8db281%3A0xa5f3ce91510f566b!2sUVA+-+Campus+CIDAO!5e0!3m2!1spt-BR!2sbr!4v1543778117984" class="map-google" frameborder="0" allowfullscreen></iframe>
+                <div class="col-md-6">
+                    <h3 class="section-heading">Oficinas</h3>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d995.3933480479128!2d-40.342446590282435!3d-3.6840823133657996!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7eac723aa8db281%3A0xa5f3ce91510f566b!2sUVA+-+Campus+CIDAO!5e0!3m2!1spt-BR!2sbr!4v1543778117984"
+                        class="map-google" frameborder="0" allowfullscreen></iframe>
                     <h6>* Dirigir-se ao bloco do Curso de Ciências da Computação</h6>
                 </div>
             </div>
