inserido maratona de programção

--- a/index.html
+++ b/index.html
@@ -833,12 +833,65 @@
                         <div class="row row-top-10">
                             <div class="col-md-3">
                                 <span class="atividade">
-                                    14:00 às 18:00
+                                    09:00 às 11:00
                                 </span>
                             </div>
                             <div class="col-md-3">
                                 <span class="atividade">
                                     Laboratório 1
+                                </span>
+                            </div>
+                            <div class="col-md-6">
+                                <span class="atividade">
+                                    Aquecimento Maratona de Programação
+                                </span>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <img class="img-cronograma" src="img/palestrantes/maratona.jpg">
+                    </div>
+                </div>
+
+                <div class="row row-linha">
+                    <div class="col-md-10 text-left">
+                        <div class="row row-top-10">
+                            <div class="col-md-3">
+                                <span class="atividade">
+                                    09:00 às 11:00
+                                </span>
+                            </div>
+                            <div class="col-md-3">
+                                <span class="atividade">
+                                    Laboratório 1
+                                </span>
+                            </div>
+                            <div class="col-md-6">
+                                <span class="atividade">
+                                    Maratona de Programação
+                                </span>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <img class="img-cronograma" src="img/palestrantes/maratona.jpg">
+                    </div>
+                </div>
+
+
+                <div class="row row-linha">
+                    <div class="col-md-10 text-left">
+                        <div class="row row-top-10">
+                            <div class="col-md-3">
+                                <span class="atividade">
+                                    14:00 às 18:00
+                                </span>
+                            </div>
+                            <div class="col-md-3">
+                                <span class="atividade">
+                                    Sala 40
                                 </span>
                             </div>
                             <div class="col-md-6">
@@ -890,7 +943,7 @@
                             </div>
                             <div class="col-md-3">
                                 <span class="atividade">
-                                    Sala 40
+                                    Sala 39
                                 </span>
                             </div>
                             <div class="col-md-6">
